[gd_scene load_steps=3 format=3 uid="uid://bio63h0oe4im5"]

[ext_resource type="Script" path="res://page_view.gd" id="1_smqd8"]
[ext_resource type="Script" path="res://ui/feed_view.gd" id="2_qkhvp"]

[node name="main" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="scroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="hbox" type="HBoxContainer" parent="scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="spacer_l" type="Control" parent="scroll/hbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="main_content_container" type="MarginContainer" parent="scroll/hbox"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="feed_view" type="VBoxContainer" parent="scroll/hbox/main_content_container"]
layout_mode = 2
script = ExtResource("2_qkhvp")

[node name="toolbar" type="HBoxContainer" parent="scroll/hbox/main_content_container/feed_view"]
layout_mode = 2

[node name="input_refreshbut" type="Button" parent="scroll/hbox/main_content_container/feed_view/toolbar"]
layout_mode = 2
text = "Refresh"

[node name="input_url" type="LineEdit" parent="scroll/hbox/main_content_container/feed_view/toolbar"]
layout_mode = 2
size_flags_horizontal = 3
text = "https://suppo.fi/c/photogrammetry"

[node name="post_list" type="VBoxContainer" parent="scroll/hbox/main_content_container/feed_view"]
layout_mode = 2

[node name="post_listing" type="PanelContainer" parent="scroll/hbox/main_content_container/feed_view/post_list"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="spacer_bottom" type="Control" parent="scroll/hbox/main_content_container/feed_view"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="page_view" type="VBoxContainer" parent="scroll/hbox/main_content_container"]
visible = false
layout_mode = 2
script = ExtResource("1_smqd8")

[node name="spacer_r" type="Control" parent="scroll/hbox"]
layout_mode = 2
size_flags_horizontal = 3
